--- a/css/notice.css
+++ b/css/notice.css
@@ -1,3 +1,54 @@
 .page{
   text-align: center;
 }
+
+
+*{
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  /* background-color: rgba(0, 0, 0, 0.1); */
+}
+
+
+.page{
+  text-align: center;
+}
+.information{
+  margin: 20px,auto;
+  width: 80%;
+  -webkit-box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
+  box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
+  padding: 0;
+}
+.info-left-nav{
+  width: 12%;
+}
+
+.info-message{
+  width: 88%;
+}
+.info-left-nav .nav .block{
+  width: 100%;
+  margin: 0;
+}
+
+.info-item{
+  border-bottom: 1px solid rgba(0,0,0,.2);
+}
+
+.info-message{
+  border-top:  0;
+  border-bottom:  0;
+  border-right:  0;
+}
+
+.title{
+  height: 100px;
+  font-size: 20px;
+  line-height: 100px;
+}
+
+
+.noticeContent{
+  border-top: 1px;
+}
